# bedpress

./: .gitignore  docker-compose.yaml
backend/: Dockerfile  auth.py  database.py  evaluate.py  leaderboard.db  main.py  models.py  pyproject.toml  test_evaluate.py  utils.py
backend/data/: check_questions.csv  test_questions.csv
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js  index.css  index.js
frontend/src/components/: Header.js  Podium.js  TestItem.js  leaderboardTable.js  loadingSpinner.js  qrCode.js
frontend/src/context/: AuthContext.js
frontend/src/pages/: LoginPage.js  ResultsPage.js  SubmitPage.js
frontend/src/services/: api.js
frontend/src/utils/: helpers.js
